# django-docs-helper

./: .gitignore  ingestion.py  main.py  pyproject.toml
.chroma/: chroma.sqlite3
graph/: constants.py  graph.py  state.py
graph/chains/: answer_grader.py  generation.py  hallucination_grader.py  retrieval_grader.py  router.py
graph/chains/tests/: test_chains.py
graph/nodes/: __init__.py  generate.py  grade_documents.py  retrieve.py  websearch.py
